# image-service

./: CMakeLists.txt  readme.md
includes/ImageMagick/: NOTICE.txt  configure.xml  english.xml
includes/ImageMagick/include/MagickCore/: version.h
includes/ImageMagick/lib/: CORE_RL_MagickWand_.lib
includes/ImageMagick/www/: changelog.html  mirror.html
includes/ImageMagick/www/source/: english.xml
lib/: CORE_RL_Magick++_.lib  CORE_RL_MagickCore_.lib
src/: main.cpp
src/client/: Client.cpp  Client.h  main.cpp
src/helper/: Helper.cpp  Helper.h
src/image-helper/: ImageHelper.cpp  ImageHelper.h
src/server/: Server.cpp  Server.h
src/size/: Size.cpp  Size.h
